# vole-machine

./: Alu.cpp  Alu.h  CMakeLists.txt  ControlUnit.cpp  ControlUnit.h  cpu.cpp  cpu.h  machine.cpp  machine.h  main.cpp  mainUi.cpp  mainUi.h  memory.cpp  memory.h  register.cpp  register.h
